@@ -1,16 +1,16 @@
 package seedu.address.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
-import static seedu.address.testutil.TypicalPersons.CARL;
-import static seedu.address.testutil.TypicalPersons.ELLE;
-import static seedu.address.testutil.TypicalPersons.FIONA;
-import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
+import static seedu.address.testutil.TypicalDevelopers.CARL;
+import static seedu.address.testutil.TypicalDevelopers.ELLE;
+import static seedu.address.testutil.TypicalDevelopers.FIONA;
+import static seedu.address.testutil.TypicalDevelopers.getTypicalAddressBook;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -24,8 +24,8 @@ import seedu.address.model.developer.NameDeveloperContainsKeywordsPredicate;
  * Contains integration tests (interaction with the Model) for {@code FindDeveloperCommand}.
  */
 public class FindDeveloperCommandTest {
-    private Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
-    private Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
 
     @Test
     public void equals() {
@@ -38,27 +38,27 @@ public class FindDeveloperCommandTest {
         FindDeveloperCommand findSecondCommand = new FindDeveloperCommand(secondPredicate);
 
         // same object -> returns true
-        assertTrue(findFirstCommand.equals(findFirstCommand));
+        assertEquals(findFirstCommand, findFirstCommand);
 
         // same values -> returns true
         FindDeveloperCommand findFirstCommandCopy = new FindDeveloperCommand(firstPredicate);
-        assertTrue(findFirstCommand.equals(findFirstCommandCopy));
+        assertEquals(findFirstCommand, findFirstCommandCopy);
 
         // different types -> returns false
-        assertFalse(findFirstCommand.equals(1));
+        assertNotEquals(1, findFirstCommand);
 
         // null -> returns false
-        assertFalse(findFirstCommand.equals(null));
+        assertNotEquals(null, findFirstCommand);
 
         // different developer -> returns false
-        assertFalse(findFirstCommand.equals(findSecondCommand));
+        assertNotEquals(findFirstCommand, findSecondCommand);
     }
 
     @Test
     public void execute_zeroKeywords_noPersonFound() {
         //String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0);
-        String expectedMessage = "";
-        NameDeveloperContainsKeywordsPredicate predicate = preparePredicate(" ");
+        String expectedMessage = "There are the 0 developers with matching information.";
+        NameDeveloperContainsKeywordsPredicate predicate = preparePredicate("hii");
         FindDeveloperCommand command = new FindDeveloperCommand(predicate);
         expectedModel.updateFilteredDeveloperList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
@@ -68,7 +68,7 @@ public class FindDeveloperCommandTest {
     @Test
     public void execute_multipleKeywords_multiplePersonsFound() {
         //String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3);
-        String expectedMessage = "";
+        String expectedMessage = "There are the 3 developers with matching information.";
         NameDeveloperContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
         FindDeveloperCommand command = new FindDeveloperCommand(predicate);
         expectedModel.updateFilteredDeveloperList(predicate);
@@ -78,7 +78,8 @@ public class FindDeveloperCommandTest {
 
     @Test
     public void toStringMethod() {
-        NameDeveloperContainsKeywordsPredicate predicate = new NameDeveloperContainsKeywordsPredicate(Arrays.asList("keyword"));
+        NameDeveloperContainsKeywordsPredicate predicate =
+                new NameDeveloperContainsKeywordsPredicate(List.of("keyword"));
         FindDeveloperCommand findDeveloperCommand = new FindDeveloperCommand(predicate);
         String expected = FindDeveloperCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
         assertEquals(expected, findDeveloperCommand.toString());
